# nba-on-court

./: LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
example/: tutorial_en.ipynb  tutorial_ru.ipynb
nba_on_court/: __init__.py  hexdata.py  nba_on_court.py
tests/: conftest.py  pytest.ini  test_nba_on_court.py
