[tool.poetry]

name = "player_on_court"
version = "0.1.0"
description = "Adding players on court to  play-by-play data"
authors = ["Vladislav Shufinskiy <shufinsky.90210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
requests = "^2.23.0"
nba-api = "^1.1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
