# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = nba-on-court
version = 0.1.1
author = Vladislav Shufinsky
author_email = shufinsky.90210@gmail.com
home-page = https://github.com/shufinskiy/nba-on-court
description = attr: nba-on-court.__doc__
long-description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license-file = LICENSE
platform = any
keywords = nba, play-by-play
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
package_dir =
    nba-on-court=nba_on_court
    tests=tests
packages =
    nba-on-court
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
